name:                the-world
version:             0
synopsis:            A bunch of stuff
description:
    A bunch of unrelated stuff that I find useful sometimes. I will not be
    publishing this on Hackage.
license:             GPL-3
license-file:        LICENSE
author:              Matthew Harm Bekkema
maintainer:          mbekkema97@gmail.com
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.STM.TStream
                       Control.Foldl.Extra
                       System.Directory.Foldl
                       System.Process.Typed.Filtered
                       Web.YouTube
                       Web.YouTube.DateFormat
                       Web.YouTube.DateFormat.Latest
                       Web.YouTube.Playlist
  ghc-options:         -Wall
  build-depends:       base < 5
                     , async
                     , conduit
                     , containers
                     , exceptions
                     , foldl
                     , lens
                     , stm
                     , streaming-commons
                     , time
                     , transformers
                     , typed-process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mat8913/the-world
